--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
+    "test:unit": "cross-env NODE_ENV=test jest __tests__/unit --forceExit"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -21,9 +23,19 @@
     "prettier": "^3.2.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "@eslint/js": "^9.3.0",
+    "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "9.x",
+    "esm": "^3.2.25",
     "globals": "^15.2.0",
-    "prisma": "^5.14.0"
+    "jest": "^29.2.1",
+    "prisma": "^5.14.0",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
